Fix a z-index issue for firefox

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -83,12 +83,12 @@ $brandcolorsoftcoursedefault: orange;
                             0 1px 10px 0 rgba(0, 0, 0, .12);
 
                             .softcourse-section-img {
-                                z-index: 3;
 
                                 .delete-img,
                                 .update-img,
                                 span {
-                                    z-index: 4;
+                                    cursor: pointer;
+                                    opacity: 0.75;
 
                                     &:hover {
                                         color: #fff;
@@ -96,9 +96,8 @@ $brandcolorsoftcoursedefault: orange;
                                 }
 
                                 .delete-img,
-                                span,
                                 .update-img {
-                                    opacity: 0.75;
+                                    z-index: 4;
                                 }
                             }
 
